Project

General

Profile

Actions

Bug #57097

open

ceph status does not report an application is not enabled on the pool if pool has 0 objects stored in it

Added by Prashant D over 1 year ago. Updated 8 months ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
reef, quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If pool has 0 objects in it then ceph status (and ceph health detail) does not report application is not enabled for the pool.


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #62478: reef: ceph status does not report an application is not enabled on the pool if pool has 0 objects stored in itResolvedPrashant DActions
Copied to RADOS - Backport #62479: quincy: ceph status does not report an application is not enabled on the pool if pool has 0 objects stored in itResolvedPrashant DActions
Actions #1

Updated by Prashant D over 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 47560
Actions #2

Updated by Prashant D 8 months ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to reef, quincy
Actions #3

Updated by Backport Bot 8 months ago

  • Copied to Backport #62478: reef: ceph status does not report an application is not enabled on the pool if pool has 0 objects stored in it added
Actions #4

Updated by Backport Bot 8 months ago

  • Copied to Backport #62479: quincy: ceph status does not report an application is not enabled on the pool if pool has 0 objects stored in it added
Actions #5

Updated by Backport Bot 8 months ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF